[package]
name = "picture_score_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.87"
image = { version = "0.24.7", default-features = false, features = ["jpeg", "png"] }
ndarray = "0.15.6"
tract-onnx = "0.21.5"

[dependencies.getrandom]
version = "0.2.15"
features = ["js"]

[profile.release]
lto = true
opt-level = "s"
