[package]
name = "wgpu-test"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wgpu = { version = "0.19", features = ["webgl"] }
pollster = "0.3"
env_logger = "0.10"
log = "0.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Window",
    "WebGl2RenderingContext",
] }
js-sys = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
